[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-lock"
version = "1.0.0"
description = "Distributed locking for multi-agent shared resource access"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Darshankumar Joshi", email = "darshjme@gmail.com"},
]
keywords = ["locking", "distributed", "agents", "concurrency", "thread-safety"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-timeout"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
